# django-shopify-embedded-app

./: .env.local.example  .gitignore  LICENSE  README.md  manage.py  pyproject.toml
django-shopify-embedded-app/: asgi.py  settings.py  urls.py  wsgi.py
shopify_app/: admin.py  apps.py  decorators.py  models.py  urls.py  views.py
shopify_app/migrations/: 0001_initial.py
shopify_app/services/: shop.py
shopify_app/templates/shopify_app/: embedded_app.html
